[package]
name = "boardgame-server"
version = "0.0.2"
authors = ["Alexandr Krikun <krikun.contact@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "url_query",
]

[dependencies]
fastcgi = "1.0.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"

url_query = {path = "./url_query"}